(Fix) Incorrect view of skills on IE

--- a/src/app/skills/skills.component.scss
+++ b/src/app/skills/skills.component.scss
@@ -10,8 +10,6 @@
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-between;
-  margin-left: auto;
-  margin-right: auto;
   h2 {
     margin-top: 50px;
     margin-bottom: 50px;
